force-app/main/default/objects/Order/fields/Calculated_Total_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Total_Price_Adjustment__c</fullName>
    <formula>1-( Aggregate_Calculated_Total_Price__c / Aggregate_Total_price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Total Price Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>