force-app/main/default/objects/Order/fields/Desk_Count__c.field-meta.xml
<CustomField>
    <fullName>Desk_Count__c</fullName>
    <label>Desk Count</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Product_Type_Name__c</field>
        <operation>contains</operation>
        <value>Standard</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Temporary__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>