force-app/main/default/objects/Order/fields/Total_Other_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Quantity__c</fullName>
    <label>Total Other Quantity</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Product_Type_Name__c</field>
        <operation>notContain</operation>
        <value>Stanadrd</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Product_Sub_Type_Name__c</field>
        <operation>notContain</operation>
        <value>Parking</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>