force-app/main/default/objects/Order/fields/Total_Parking_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Parking_Quantity__c</fullName>
    <label>Total Parking Quantity</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Product_Sub_Type_Name__c</field>
        <operation>equals</operation>
        <value>Parking spot</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Access_Type__c</field>
        <operation>equals</operation>
        <value>Periodic, Monthly</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>