force-app/main/default/objects/Order/fields/Total_Standard_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Standard_Income__c</fullName>
    <label>Total Standard Income</label>
    <summarizedField>OrderItem.Total_Calculated_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Product_Type_Name__c</field>
        <operation>contains</operation>
        <value>Standard</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>